syntax = "proto3";

package rate;

service Rate {
    // GetRates returns the exchange rate for the given currencies
    rpc GetRates(Request) returns (Result);
}

message Request {
    string sourceCurrency=1;
    string targetCurrency=2;
}

message Result {
    double rate=1;
}
